--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.9.1
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
+dj-database-url==3.0.1
 Django==5.2.5
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
@@ -10,6 +11,7 @@ gunicorn==23.0.0
 idna==3.10
 packaging==25.0
 pillow==11.3.0
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 PyJWT==2.10.1
