--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+absl-py==2.3.1
 asgiref==3.9.1
+astunparse==1.6.3
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
@@ -6,18 +8,47 @@ dj-database-url==3.0.1
 Django==5.2.5
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+flatbuffers==25.9.23
+gast==0.6.0
 google-auth==2.40.3
+google-pasta==0.2.0
+grpcio==1.75.1
 gunicorn==23.0.0
+h5py==3.14.0
 idna==3.10
+keras==3.11.3
+libclang==18.1.1
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+ml_dtypes==0.5.3
+namex==0.1.0
+numpy==2.3.3
+opt_einsum==3.4.0
+optree==0.17.0
 packaging==25.0
 pillow==11.3.0
+protobuf==6.32.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+Pygments==2.19.2
 PyJWT==2.10.1
 qrcode==8.2
 requests==2.32.5
+rich==14.2.0
 rsa==4.9.1
+setuptools==80.9.0
+six==1.17.0
 sqlparse==0.5.3
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow_cpu==2.20.0
+termcolor==3.1.0
+typing_extensions==4.15.0
 urllib3==2.5.0
+Werkzeug==3.1.3
+wheel==0.45.1
 whitenoise==6.10.0
+wrapt==1.17.3
