--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 dj-database-url==3.0.1
 Django==5.2.5
+django-crontab==0.7.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 flatbuffers==25.9.23
