new requirement updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Markdown==3.9
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+nepali-datetime==1.0.8.4
 numpy==2.3.3
 packaging==25.0
 pillow==11.3.0
