--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pyasn1_modules==0.4.2
 pycparser==2.23
 Pygments==2.19.2
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 qrcode==8.2
 requests==2.32.5
 rich==14.2.0
