--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -1,14 +1,14 @@
-name: Keep Render Alive
+#name: Keep Render Alive
 
-on:
-  schedule:
+#on:
+  #schedule:
     # Run every 10 minutes
-    - cron: "*/10 * * * *"
+    # - cron: "*/10 * * * *"
 
-jobs:
-  ping:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Ping Render service
-        run: |
-          curl -s -o /dev/null -w "%{http_code}" https://django-insurance-tracker.onrender.com/users/api/profile/
+# jobs:
+  # ping:
+    # runs-on: ubuntu-latest
+    # steps:
+      # - name: Ping Render service
+        # run: |
+          # curl -s -o /dev/null -w "%{http_code}" https://django-insurance-tracker.onrender.com/users/api/profile/
