--- a/requirements.txt
+++ b/requirements.txt
@@ -55,11 +55,11 @@ six==1.17.0
 sqlparse==0.5.3
 sympy==1.14.0
 tifffile==2025.10.16
-torch==2.9.1+cpu
-torchaudio==2.9.1+cpu
-torchvision==0.24.1+cpu
 typing_extensions==4.15.0
 urllib3==2.5.0
 wheel==0.45.1
 whitenoise==6.10.0
 
+
+#for cpu version of easyocr run following command in terminal
+#pip install torch==2.9.1+cpu torchvision==0.24.1+cpu torchaudio==2.9.1+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
