--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,61 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+# PyTorch CPU wheels for Render (Py 3.10 compatible)
+torch==2.1.2+cpu
+torchvision==0.16.2+cpu
+torchaudio==2.1.2+cpu
+
+# Scientific stack compatible with Python 3.10 (NO source build)
+numpy==1.26.4
+scipy==1.11.4
+scikit-image==0.22.0
+opencv-python-headless==4.9.0.80
+imageio==2.34.0
+tifffile==2023.7.10
+
+# EasyOCR and dependencies
+easyocr==1.7.2
+python-bidi==0.6.7
+pyclipper==1.3.0.post6
+shapely==2.0.4
+pillow==10.3.0
+
+# Django + DRF stack
+Django==5.2.5
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+django-cloudinary-storage==0.3.0
+cloudinary==1.44.1
+django-environ==0.12.0
+dj-database-url==3.0.1
+whitenoise==6.10.0
+gunicorn==23.0.0
+psycopg2-binary==2.9.10
+
+# Utilities
 asgiref==3.9.1
 cachetools==5.5.2
 certifi==2025.8.3
-cffi==2.0.0
+cffi==1.16.0
 charset-normalizer==3.4.3
-cloudinary==1.44.1
-cryptography==46.0.2
-dj-database-url==3.0.1
-Django==5.2.5
-django-cloudinary-storage==0.3.0
-django-crontab==0.7.1
-django-environ==0.12.0
-djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
-easyocr==1.7.2
-filelock==3.19.1
-fsspec==2025.9.0
-google-auth==2.40.3
-gunicorn==23.0.0
+cryptography==42.0.5
 idna==3.10
-ImageIO==2.37.2
 Jinja2==3.1.6
-lazy_loader==0.4
-Markdown==3.9
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 mdurl==0.1.2
-mpmath==1.3.0
-nepali-datetime==1.0.8.4
-networkx==3.5
-ninja==1.13.0
-numpy==2.2.6
-opencv-python-headless==4.12.0.88
-packaging==25.0
-pillow==11.3.0
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pyclipper==1.3.0.post6
-pycparser==2.23
-Pygments==2.19.2
-PyJWT==2.10.1
-python-bidi==0.6.7
+networkx==3.1
+packaging==23.2
 python-dateutil==2.9.0.post0
-PyYAML==6.0.3
-qrcode==8.2
-requests==2.32.5
-rich==14.2.0
-rsa==4.9.1
-scikit-image==0.25.2
-scipy==1.16.3
-setuptools==80.9.0
-shapely==2.1.2
-six==1.17.0
-sqlparse==0.5.3
-sympy==1.14.0
-tifffile==2025.10.16
-typing_extensions==4.15.0
-urllib3==2.5.0
-wheel==0.45.1
-whitenoise==6.10.0
+PyJWT==2.8.0
+PyYAML==6.0.1
+qrcode==7.4.2
+requests==2.32.3
+urllib3==2.2.3
+rich==13.7.1
+sqlparse==0.5.1
+typing_extensions==4.9.0
+six==1.16.0
+nepali-datetime==1.0.8.4
 
-# PyTorch CPU for Render
-torch==2.3.1+cpu
-torchvision==0.18.1+cpu
-torchaudio==2.3.1+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
