--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,8 @@ dj-database-url==3.0.1
 whitenoise==6.10.0
 gunicorn==23.0.0
 psycopg2-binary==2.9.10
+django-crontab==0.7.1
+
 
 # Utilities
 asgiref==3.9.1
