--- a/requirementsDevlopment.txt
+++ b/requirementsDevlopment.txt
@@ -9,35 +9,56 @@ dj-database-url==3.0.1
 Django==5.2.5
 django-cloudinary-storage==0.3.0
 django-crontab==0.7.1
+django-environ==0.12.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+easyocr==1.7.2
+filelock==3.19.1
+fsspec==2025.9.0
 google-auth==2.40.3
 gunicorn==23.0.0
 idna==3.10
+ImageIO==2.37.2
+Jinja2==3.1.6
+lazy_loader==0.4
 Markdown==3.9
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+mpmath==1.3.0
 nepali-datetime==1.0.8.4
-numpy==2.3.3
+networkx==3.5
+ninja==1.13.0
+numpy==2.2.6
+opencv-python-headless==4.12.0.88
 packaging==25.0
 pillow==11.3.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pyclipper==1.3.0.post6
 pycparser==2.23
 Pygments==2.19.2
 PyJWT==2.10.1
+python-bidi==0.6.7
 python-dateutil==2.9.0.post0
+PyYAML==6.0.3
 qrcode==8.2
 requests==2.32.5
 rich==14.2.0
 rsa==4.9.1
+scikit-image==0.25.2
+scipy==1.16.3
 setuptools==80.9.0
+shapely==2.1.2
 six==1.17.0
 sqlparse==0.5.3
+sympy==1.14.0
+tifffile==2025.10.16
 typing_extensions==4.15.0
 urllib3==2.5.0
 wheel==0.45.1
 whitenoise==6.10.0
-django-environ==0.12.0
+
+# for cpu version of easyocr run following command in terminal
+# pip install torch torchvision torchaudio -f https://download.pytorch.org/whl/cpu
