--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - .:/app
     environment:
       - DEBUG=1
-      - DATABASE_URL=postgres://myuser:mypassword@db:5432/mydb
+      - DATABASE_URL=postgres://myuser:mypassword@db:5432/mydb?sslmode=disable
       - SECRET_KEY=tzGCemglPecJ0dMdx3vnKPVKIuvVHWCaXApLcllkUGc
       - CRON_JOB_SECRET_KEY=xywWlDs6I4VVfViGiBwoDF9ytm8miGnFzVQT4Gt2zkw
       - CLOUDINARY_CLOUD_NAME=daxlrnkcb
