--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,6 @@
 version: '3'
 
 services:
-  db:
-    image: postgres:15
-    container_name: postgres_db
-    restart: always
-    environment:
-      POSTGRES_DB: mydb
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
 
   backend:
     build: .
@@ -22,16 +10,5 @@ services:
     volumes:
       - .:/app
     environment:
-      - DEBUG=1
-      - DATABASE_URL=postgres://myuser:mypassword@db:5432/mydb?sslmode=disable
-      - SECRET_KEY=tzGCemglPecJ0dMdx3vnKPVKIuvVHWCaXApLcllkUGc
-      - CRON_JOB_SECRET_KEY=xywWlDs6I4VVfViGiBwoDF9ytm8miGnFzVQT4Gt2zkw
-      - CLOUDINARY_CLOUD_NAME=daxlrnkcb
-      - CLOUDINARY_API_SECRET=yxKO2I4RQBD2jVppgVSxWzsjlsM
-      - CLOUDINARY_API_KEY=948349496971634
+      - DEBUG=0 and FROM python:3.11-slim
 
-    depends_on:
-      - db
-
-volumes:
-  postgres_data:
